--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,13 +8,17 @@ on:
     branches:
       - main
 
-# ISSUE 1: Missing environment variables definition at workflow level
-# ISSUE 2: No concurrency control - multiple deployments can run simultaneously
+# Prevent concurrent deployments
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: false
+
+env:
+  GO_VERSION: '1.22'
+  DOCKER_REGISTRY: ${{ secrets.DOCKER_REGISTRY || 'myregistry.example.com' }}
+  IMAGE_NAME: go-app-demo
 
 jobs:
-  # ISSUE 3: Jobs run in parallel without proper dependencies
-  # This can cause race conditions
-  
   build:
     name: Build Application
     runs-on: ubuntu-latest
@@ -22,19 +26,26 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # ISSUE 4: Using older Go version instead of 1.22
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
-          go-version: '1.21'
+          go-version: ${{ env.GO_VERSION }}
+          cache: true
 
       - name: Build
         run: make build
 
+      - name: Upload binary artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: go-app-demo
+          path: go-app-demo
+          retention-days: 1
+
   test:
     name: Run Tests
     runs-on: ubuntu-latest
-    # ISSUE 5: Missing 'needs: build' - should run after build
+    needs: build
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -42,14 +53,26 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
-          go-version: '1.21'
+          go-version: ${{ env.GO_VERSION }}
+          cache: true
 
       - name: Run tests
         run: make test
 
+      - name: Run tests with coverage
+        run: make coverage
+
+      - name: Upload coverage report
+        uses: actions/upload-artifact@v3
+        with:
+          name: coverage-report
+          path: coverage.out
+          retention-days: 7
+
   lint:
     name: Lint Code
     runs-on: ubuntu-latest
+    needs: build
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -57,52 +80,82 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
-          go-version: '1.21'
+          go-version: ${{ env.GO_VERSION }}
+          cache: true
 
-      # ISSUE 6: Makefile doesn't have 'lint' target, this will fail
       - name: Run linter
         run: make lint
 
   docker-build:
     name: Build Docker Image
     runs-on: ubuntu-latest
-    # ISSUE 7: Should depend on test and lint passing
+    needs: [test, lint]
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # ISSUE 8: No Docker layer caching configured
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
       - name: Build Docker image
-        run: make docker-build
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          push: false
+          tags: |
+            ${{ env.IMAGE_NAME }}:latest
+            ${{ env.IMAGE_NAME }}:${{ github.sha }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
   docker-push:
     name: Push Docker Image
     runs-on: ubuntu-latest
-    # ISSUE 9: Missing proper job dependency - should need docker-build
+    needs: docker-build
     if: github.ref == 'refs/heads/main'
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # ISSUE 10: Hardcoded credentials in workflow (SECURITY ISSUE!)
-      - name: Docker login
-        run: |
-          echo "hardcoded-password-123" | docker login myregistry.example.com -u deployuser --password-stdin
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
-      # ISSUE 11: No proper image tagging with version or commit SHA
-      - name: Push Docker image
-        run: make docker-push
+      - name: Log in to Docker Registry
+        uses: docker/login-action@v2
+        with:
+          registry: ${{ env.DOCKER_REGISTRY }}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Extract version
+        id: version
+        run: |
+          RAW_VERSION=$(cat VERSION)
+          VERSION=$(echo $RAW_VERSION | sed 's/-SNAPSHOT//')
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
+          echo "Normalized version: $VERSION"
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          push: true
+          tags: |
+            ${{ env.DOCKER_REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+            ${{ env.DOCKER_REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.version.outputs.version }}
+            ${{ env.DOCKER_REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.version.outputs.version }}-${{ github.sha }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
   deploy:
     name: Deploy to Cloud Foundry
     runs-on: ubuntu-latest
-    # ISSUE 12: Missing dependencies - should need docker-push
+    needs: docker-push
     if: github.ref == 'refs/heads/main'
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # ISSUE 13: Hardcoded CF credentials (SECURITY ISSUE!)
       - name: Install CF CLI
         run: |
           wget -q -O - https://packages.cloudfoundry.org/debian/cli.cloudfoundry.org.key | sudo apt-key add -
@@ -112,11 +165,39 @@ jobs:
 
       - name: CF Login
         run: |
-          cf login -a https://api.cf.example.com -u admin@example.com -p "SuperSecret123" -o my-org -s dev
+          cf login -a ${{ secrets.CF_API }} \
+            -u ${{ secrets.CF_USERNAME }} \
+            -p ${{ secrets.CF_PASSWORD }} \
+            -o ${{ secrets.CF_ORG }} \
+            -s ${{ secrets.CF_SPACE }}
 
-      # ISSUE 14: VERSION still has -SNAPSHOT, deployment will use wrong version
-      - name: Deploy
-        run: make deploy
+      - name: Normalize VERSION
+        run: |
+          RAW_VERSION=$(cat VERSION)
+          VERSION=$(echo $RAW_VERSION | sed 's/-SNAPSHOT//')
+          echo "Normalized VERSION: $VERSION"
+          sed -i "s/VERSION:.*/VERSION: $VERSION/" manifest.yml
 
-      # ISSUE 15: No deployment verification or smoke tests
-      # ISSUE 16: No rollback mechanism if deployment fails
+      - name: Deploy to Cloud Foundry
+        id: deploy
+        run: |
+          cf push go-app-demo -f manifest.yml
+          echo "deployed=true" >> $GITHUB_OUTPUT
+
+      - name: Verify deployment
+        if: steps.deploy.outputs.deployed == 'true'
+        run: |
+          echo "Waiting for app to start..."
+          sleep 10
+          APP_URL=$(cf app go-app-demo | grep routes: | awk '{print $2}')
+          echo "Testing health endpoint..."
+          curl -f "https://$APP_URL/health" || exit 1
+          echo "Testing info endpoint..."
+          curl -f "https://$APP_URL/info" || exit 1
+          echo "✓ Deployment verified successfully"
+
+      - name: Rollback on failure
+        if: failure() && steps.deploy.outputs.deployed == 'true'
+        run: |
+          echo "Deployment failed, rolling back..."
+          cf rollback go-app-demo || echo "Rollback failed or not available"
