--- a/manifest.yml
+++ b/manifest.yml
@@ -1,22 +1,31 @@
 ---
 applications:
   - name: go-app-demo
-    memory: 128M
-    instances: 1
+    memory: 256M
+    disk_quota: 512M
+    instances: 2
     buildpacks:
       - go_buildpack
-    # ISSUE 1: VERSION still contains -SNAPSHOT which should be stripped
+    
+    # VERSION is normalized by CI/CD pipeline (strips -SNAPSHOT)
     env:
-      VERSION: 1.189.0-SNAPSHOT
-    # ISSUE 2: No health check endpoint configured
-    # health-check-type: http
-    # health-check-http-endpoint: /health
+      VERSION: 1.189.0
     
-    # ISSUE 3: No route configuration - using default random route
-    # routes:
-    #   - route: go-app-demo.example.com
+    # Health check configuration
+    health-check-type: http
+    health-check-http-endpoint: /health
+    health-check-invocation-timeout: 5
     
-    # ISSUE 4: Missing resource limits and scaling configuration
-    # disk_quota: 256M
+    # Route configuration
+    routes:
+      - route: go-app-demo.example.com
     
-    # ISSUE 5: No environment-specific configuration (dev/staging/prod)
+    # Resource limits and scaling
+    processes:
+      - type: web
+        instances: 2
+        memory: 256M
+        disk_quota: 512M
+    
+    # Timeout settings
+    timeout: 60
